# merlo-rs

./: Cargo.toml  LICENSE  README.md
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: animation.rs  camera.rs  main.rs  network.rs  presentation.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: controller.rs  lib.rs
src/: animation.rs  camera.rs  controller.rs  main.rs
