[package]
name = "merlo-rs"
version = "0.1.0"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
edition = "2024"
description = "A 3D game prototype"
readme = "README.md"
license = "MIT"

[dependencies]
bevy = "0.17.3"
bevy-inspector-egui = "0.35.0"
bevy_egui = "0.38.1"
bevy_rapier3d = "0.32.0"
egui_dock = "0.18.0"
