[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.17.3", features = ["serialize"] }
bevy-inspector-egui = "0.35.0"
bevy_egui = "0.38.1"
bevy_rapier3d = { version = "0.32.0", features = ["serde-serialize"] }
egui_dock = "0.18.0"
bevy_replicon = "0.37.2"
bevy_replicon_renet = "0.13.0"
serde = "1.*"
